Reviewer's corrections and additions